src/testlib/qtestcase.h
@@ -149,7 +149,7 @@ inline void useVerifyThrowsException() {}
  * what the following provides as QTRY_LOOP_IMPL(); however, for now, the
  * reporting of how much to increase the timeout to (if within a factor of two)
  * on failure and the check for (QTest::runningTest() &&
- * QTest::currentTestFailed()) go beyond qWaitFor(). (We no longer care about
+ * QTest::currentTestResolved()) go beyond qWaitFor(). (We no longer care about
  * the bug in MSVC < 2017 that precluded using qWaitFor() in the implementation
  * here, see QTBUG-59096.)
  */
@@ -160,14 +160,14 @@ inline void useVerifyThrowsException() {}
         QTest::qWait(0); \
     } \
     int qt_test_i = 0; \
-    for (; qt_test_i < timeoutValue && !(QTest::runningTest() && QTest::currentTestFailed()) \
+    for (; qt_test_i < timeoutValue && !(QTest::runningTest() && QTest::currentTestResolved()) \
              && !(expr); qt_test_i += step) { \
         QTest::qWait(step); \
     }
 // Ends in a for-block, so doesn't want a following semicolon.
 
 #define QTRY_TIMEOUT_DEBUG_IMPL(expr, timeoutValue, step) \
-    if (!(QTest::runningTest() && QTest::currentTestFailed()) && !(expr)) { \
+    if (!(QTest::runningTest() && QTest::currentTestResolved()) && !(expr)) { \
         QTRY_LOOP_IMPL(expr, 2 * (timeoutValue), step) \
         if ((expr)) { \
             QFAIL(qPrintable(QTest::Internal::formatTryTimeoutDebugMessage(\
@@ -420,6 +420,7 @@ namespace QTest
     Q_TESTLIB_EXPORT const char *currentTestFunction();
     Q_TESTLIB_EXPORT const char *currentDataTag();
     Q_TESTLIB_EXPORT bool currentTestFailed();
+    Q_TESTLIB_EXPORT bool currentTestResolved();
     Q_TESTLIB_EXPORT bool runningTest(); // Internal, for use by macros and QTestEventLoop.
 
     Q_TESTLIB_EXPORT Qt::Key asciiToKey(char ascii);
